Bug 440932 - Preview resolution gets reset to 4800 making the scanning too slow and unstable on canon lide 220
Summary: Preview resolution gets reset to 4800 making the scanning too slow and unstab...
Status: RESOLVED FIXED
Alias: None
Product: Skanlite
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-13 15:33 UTC by Raghavendra kamath
Modified: 2021-08-19 17:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing preview resolution (156.47 KB, image/png)
2021-08-14 05:50 UTC, Raghavendra kamath
Details
Screenshot showing Scan resolution (89.89 KB, image/png)
2021-08-14 05:51 UTC, Raghavendra kamath
Details
screen capture showing the issue (1.39 MB, video/webm)
2021-08-14 05:53 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2021-08-13 15:33:54 UTC
SUMMARY
I have a cannon Lide 220 scanner, until the 21.08 update skanlite worked like a charm but after this latest update today on arch linux skanlite is unstable. The preview resolution is set to 4800 not matter what I choose in the setting it resets to 4800 and scan process starts obviously very slowly. 

I even tried to manually correct the resolution value in the skanliterc but at the application shutdown the value always reverts to 4800

sane 1.0.32-3
libksane 21.08.0-1

Please let me know if you need any more details.

Operating System: Arch Linux
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2
Kernel Version: 5.13.9-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 750 Ti/PCIe/SSE2
Comment 1 Alexander Stippich 2021-08-13 18:59:03 UTC
Sorry about that, I'm the one to blame. Could you please post a screenshot of the resolution option in Skanlite with its expanded dropdown list?
Comment 2 Raghavendra kamath 2021-08-14 05:50:38 UTC
Created attachment 140703 [details]
Screenshot showing preview resolution

Sure here I am attaching both preview resolution dropdown and the scan resolution dropdown. Be aware the UI language is in Hindi. If you want it in english please let me know.
Comment 3 Raghavendra kamath 2021-08-14 05:51:03 UTC
Created attachment 140704 [details]
Screenshot showing Scan resolution
Comment 4 Raghavendra kamath 2021-08-14 05:53:31 UTC
Created attachment 140705 [details]
screen capture showing the issue
Comment 5 Alexander Stippich 2021-08-14 10:09:05 UTC
Thanks, I think I know what's going on. Would you be able to test a patch for libksane? 
I'm away this weekend, but will post a fix next week then.
Comment 6 Raghavendra kamath 2021-08-14 10:11:11 UTC
Sure, please also add the instruction on how to apply the patch, I will test it and report back.
Comment 7 Bug Janitor Service 2021-08-17 17:56:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/libksane/-/merge_requests/42
Comment 8 Alexander Stippich 2021-08-17 17:59:26 UTC
Could you checkout the branch in the linked merge request and install libksane on your system?
Comment 9 Raghavendra kamath 2021-08-18 09:38:17 UTC
The fix works I commented on the MR too. Thanks for the fix
Comment 10 Alexander Stippich 2021-08-18 13:07:35 UTC
Git commit f227f44e67c5385167c0371de885dad8ee5592bf by Alexander Stippich.
Committed on 17/08/2021 at 17:53.
Pushed by sars into branch 'master'.

try every possible resolution value for preview

and use the one with the minimum distance to the set preview resolution

M  +15   -7    src/ksanewidget_p.cpp

https://invent.kde.org/graphics/libksane/commit/f227f44e67c5385167c0371de885dad8ee5592bf
Comment 11 Alexander Stippich 2021-08-19 17:05:43 UTC
Git commit ccb0c77e3226c09a4a00fff412dc55476daf5269 by Alexander Stippich.
Committed on 19/08/2021 at 17:05.
Pushed by astippich into branch 'release/21.08'.

try every possible resolution value for preview

and use the one with the minimum distance to the set preview resolution

M  +15   -7    src/ksanewidget_p.cpp

https://invent.kde.org/graphics/libksane/commit/ccb0c77e3226c09a4a00fff412dc55476daf5269