try every possible resolution value for preview

and use the one with the minimum distance to the set preview resolution
BUG: 440932